--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,6 +30,7 @@ subjects:
 - !lcsh 'Indians of North America -- Languages'
 - !lcsh 'Indians of North America -- Languages -- Bibliography'
 - !lcc 'E011'
+- GITenberg
 title: "Indian Linguistic Families of America, North of Mexico\r\nSeventh Annual Report\
   \ of the Bureau of Ethnology to the Secretary of the Smithsonian Institution, 1885-1886,\
   \ Government Printing Office, Washington, 1891, pages 1-142"
